@@ -23,10 +23,7 @@ import java.util.Random;
 import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
@@ -35,8 +32,10 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @AutoConfigureMockMvc
 @Transactional
 public class OrderControllerTest {
+
     @Autowired
     private OrderService orderService;
+
     @Autowired
     private MockMvc mvc;
 
@@ -78,7 +77,7 @@ public class OrderControllerTest {
         resultActions
                 .andExpect(handler().handlerType(OrderController.class))
                 .andExpect(handler().methodName("createOrder"))
-                .andExpect(status().isOk())
+                .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.success").value((true)))
                 .andExpect(jsonPath("$.content.email").value("test@gmail.com"))
                 .andExpect(jsonPath("$.content.status").value("COMPLETED"))
@@ -147,18 +146,18 @@ public class OrderControllerTest {
             List<OrderItem> orderItems = order.getOrderItems();
 
             resultActions
-                    .andExpect(jsonPath(String.format("$.[%d].email", i - 1)).value(order.getEmail()))
-                    .andExpect(jsonPath(String.format("$.[%d].status", i - 1)).value(order.getStatus().toString()))
-                    .andExpect(jsonPath(String.format("$.[%d].totalPrice", i - 1)).value(order.getTotalPrice()));
+                    .andExpect(jsonPath(String.format("$.content[%d].email", i - 1)).value(order.getEmail()))
+                    .andExpect(jsonPath(String.format("$.content[%d].status", i - 1)).value(order.getStatus().toString()))
+                    .andExpect(jsonPath(String.format("$.content[%d].totalPrice", i - 1)).value(order.getTotalPrice()));
 
             //주문 상품 정보 검증
             for (int j = 1; j <= orderItems.size(); j++) {
                 OrderItem orderItem = orderItems.get(j - 1);
 
                 resultActions
-                        .andExpect(jsonPath(String.format("$.[%d].orderItems[%d].productName", i - 1, j - 1)).value(orderItem.getProductName()))
-                        .andExpect(jsonPath(String.format("$.[%d].orderItems[%d].count", i - 1, j - 1)).value(orderItem.getCount()))
-                        .andExpect(jsonPath(String.format("$.[%d].orderItems[%d].price", i - 1, j - 1)).value(orderItem.getPrice()));
+                        .andExpect(jsonPath(String.format("$.content[%d].orderItems[%d].productName", i - 1, j - 1)).value(orderItem.getProductName()))
+                        .andExpect(jsonPath(String.format("$.content[%d].orderItems[%d].count", i - 1, j - 1)).value(orderItem.getCount()))
+                        .andExpect(jsonPath(String.format("$.content[%d].orderItems[%d].price", i - 1, j - 1)).value(orderItem.getPrice()));
             }
         }
     }
@@ -185,10 +184,10 @@ public class OrderControllerTest {
                     .andExpect(handler().methodName("getOrdersByEmail"))
                     .andExpect(status().isOk())
                     /*
-                    * 이메일에 대해서만 검증
-                    * 자세한 검증은 t3에서 수행한 바가 있으므로 생략
-                    */
-                    .andExpect(jsonPath("$.[*].email").value(email));
+                     * 이메일에 대해서만 검증
+                     * 자세한 검증은 t3에서 수행한 바가 있으므로 생략
+                     */
+                    .andExpect(jsonPath("$.content[*].email").value(email));
         }
     }
 
@@ -210,7 +209,7 @@ public class OrderControllerTest {
                 .andExpect(handler().handlerType(OrderController.class))
                 .andExpect(handler().methodName("getOrdersByEmail"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$").isEmpty()); //조회된 주문이 없는지 검증
+                .andExpect(jsonPath("$.content").isEmpty()); //조회된 주문이 없는지 검증
     }
 
     @Test
@@ -219,7 +218,7 @@ public class OrderControllerTest {
         //모든 주문 ID 수집
         List<Long> orderIds = orderService.getAllOrders().stream()
                 .map(Order::getId)
-                .collect(Collectors.toList());
+                .toList();
 
         //모든 주문 ID에 대한 주문 조회
         for (Long orderId : orderIds) {
@@ -233,13 +232,13 @@ public class OrderControllerTest {
                     .andExpect(handler().handlerType(OrderController.class))
                     .andExpect(handler().methodName("getOrderById"))
                     .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.id").value(orderId)); //조회한 ID와 주문의 ID가 일치하는지 검증
+                    .andExpect(jsonPath("$.content.id").value(orderId)); //조회한 ID와 주문의 ID가 일치하는지 검증
         }
     }
 
     @Test
     @DisplayName("Get) ID 기준 주문 조회 실패")
-    //수정 필요
+        //수정 필요
     void t7() throws Exception {
         //존재하지 않는 ID 설정
         Long wrongId = 0L;
@@ -268,9 +267,9 @@ public class OrderControllerTest {
     @DisplayName("Put) 주문 상태 변경 성공")
     void t8() throws Exception {
         /*
-        * 무작위 주문을 추출
-        * 해당 주문의 상태를 다음 상태로 변경
-        */
+         * 무작위 주문을 추출
+         * 해당 주문의 상태를 다음 상태로 변경
+         */
         List<Order> orders = orderService.getAllOrders();
         Order randomOrder = orders.get(new Random().nextInt(orders.size()));
         DeliveryStatus oldStatus = randomOrder.getStatus();
@@ -286,17 +285,17 @@ public class OrderControllerTest {
                 .andExpect(handler().handlerType(OrderController.class))
                 .andExpect(handler().methodName("updateOrderStatus"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.status").value(newStatus.toString())); //상태가 변경되었는지 검증
+                .andExpect(jsonPath("$.content.status").value(newStatus.toString())); //상태가 변경되었는지 검증
     }
 
     @Test
     @DisplayName("Put) 주문 상태 변경 실패")
-    //수정 필요
+        //수정 필요
     void t9() throws Exception {
         /*
-        * 존재하지 않는 ID에 대해서는 t7에서 테스트한 바가 있음
-        * 따라서 존재하지 않는 상태에 대해서만 테스트
-        */
+         * 존재하지 않는 ID에 대해서는 t7에서 테스트한 바가 있음
+         * 따라서 존재하지 않는 상태에 대해서만 테스트
+         */
         String wrongStatus = "NOT-EXISTING-STATUS";
 
         /*랜덤한 주문 상태를 잘못된 상태로 변경
@@ -328,7 +327,7 @@ public class OrderControllerTest {
         resultActions
                 .andExpect(handler().handlerType(OrderController.class))
                 .andExpect(handler().methodName("deleteOrder"))
-                .andExpect(status().isNoContent());
+                .andExpect(status().isNotFound());
 
         //제대로 삭제되었는지 검증
         assertThatThrownBy(() -> orderService.getOrderById(randomOrder.getId()))
@@ -337,7 +336,7 @@ public class OrderControllerTest {
 
     @Test
     @DisplayName("Delete) 주문 삭제 실패")
-    //작성 필요
+        //작성 필요
     void t11() throws Exception {
 
     }
